RESOLVED FIXED230679
RTCDataChannelHandlerClient does not need to be ref counted
https://bugs.webkit.org/show_bug.cgi?id=230679
Summary RTCDataChannelHandlerClient does not need to be ref counted
youenn fablet
Reported 2021-09-23 02:01:06 PDT
Instead we can simply use WeakPtr since we hop to the client thread before using it anyway.
Attachments
Patch (11.98 KB, patch)
2021-09-23 02:20 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2021-09-23 02:20:32 PDT
EWS
Comment 2 2021-09-24 10:31:35 PDT
Committed r283046 (242106@main): <https://commits.webkit.org/242106@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439029 [details].
Radar WebKit Bug Importer
Comment 3 2021-09-24 10:32:22 PDT
Note You need to log in before you can comment on or make changes to this bug.