RTCDataChannelHandlerClient does not need to be ref counted https://bugs.webkit.org/show_bug.cgi?id=230679

Reviewed by Eric Carlson.

Source/WebCore:

We can move from using a protected ref counted client to using a WeakPtr client
as we always hop to the client's thread before accessing it.
This reduces ref counting and simplifies lifetime management.

* Modules/mediastream/RTCDataChannel.h:
* Modules/mediastream/RTCDataChannelRemoteSource.h:
* Modules/mediastream/libwebrtc/LibWebRTCDataChannelHandler.cpp:
(WebCore::LibWebRTCDataChannelHandler::setClient):
(WebCore::LibWebRTCDataChannelHandler::checkState):
(WebCore::LibWebRTCDataChannelHandler::OnMessage):
(WebCore::LibWebRTCDataChannelHandler::OnBufferedAmountChange):
* Modules/mediastream/libwebrtc/LibWebRTCDataChannelHandler.h:
* platform/mediastream/RTCDataChannelHandlerClient.h:

Source/WebKit:

Move to UniqueRef now that it is no longer ref counted.

* WebProcess/Network/webrtc/RTCDataChannelRemoteManager.cpp:
(WebKit::RTCDataChannelRemoteManager::connectToRemoteSource):
* WebProcess/Network/webrtc/RTCDataChannelRemoteManager.h:


Canonical link: https://commits.webkit.org/242106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283046 268f45cc-cd09-0410-ab3c-d52691b4dbfc